--- a/index.html
+++ b/index.html
@@ -11,28 +11,23 @@
             min-height: 100vh; font-family: 'Poppins', sans-serif; overflow-x: hidden;
             user-select: none;
         }
-
         .hearts-bg { position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 0; }
 
-        /* --- SCANNER SCREEN --- */
+        /* --- STAGE 1: SCANNER --- */
         #door-container {
             position: fixed; width: 100%; height: 100%; z-index: 1000;
             display: flex; flex-direction: column; justify-content: center; align-items: center;
             background-color: #ff85a1; transition: all 1s ease-in-out;
         }
-
         .scanner-box {
             position: relative; width: 140px; height: 140px; border: 4px solid #fff; border-radius: 50%;
             background: rgba(255, 255, 255, 0.2); display: flex; justify-content: center; align-items: center; overflow: hidden;
         }
-
         .heart-scanner { font-size: 60px; animation: beat 1s infinite alternate; }
         @keyframes beat { from { transform: scale(1); } to { transform: scale(1.2); } }
-
         .scan-line { position: absolute; top: 0; left: 0; width: 100%; height: 6px; background: #00ffcc; animation: scanMove 1.5s linear infinite; display: none; }
         @keyframes scanMove { 0% { top: 0; } 100% { top: 100%; } }
 
-        /* NEW MESSAGE CARD (Replaces the alert popup) */
         #verify-message {
             display: none; width: 85%; max-width: 450px; background: #25d366; 
             color: white; padding: 25px; border-radius: 20px; text-align: center;
@@ -41,29 +36,21 @@
         }
         @keyframes slideUp { from { transform: translateY(50px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
 
-        /* --- GIFT SCREEN --- */
+        /* --- STAGE 2: GIFT --- */
         #gift-screen { display: none; height: 100vh; width: 100%; flex-direction: column; justify-content: center; align-items: center; background: #fff0f5; }
         .box-container { position: relative; width: 180px; height: 180px; cursor: pointer; animation: float 3s ease-in-out infinite; margin: 0 auto; }
         .box-lid { position: absolute; top: 0; width: 100%; height: 45px; background: #e63946; border-radius: 10px 10px 0 0; z-index: 2; border-bottom: 5px solid #a41638; }
         .box-body { position: absolute; bottom: 0; width: 100%; height: 145px; background: #d62828; border-radius: 0 0 10px 10px; z-index: 1; }
         .ribbon-text { position: absolute; top: 50%; width: 100%; height: 35px; background: #fff; color: #d62828; display: flex; justify-content: center; align-items: center; font-weight: bold; transform: translateY(-50%); z-index: 3; font-size: 0.8rem; }
 
-        /* --- MAIN CONTENT --- */
+        /* --- STAGE 3: CONTENT --- */
         #main-content-area { display: none; text-align: center; }
         .video-box { width: 90%; max-width: 500px; margin: 20px auto; border-radius: 20px; overflow: hidden; border: 4px solid #ff4d6d; }
         video { width: 100%; display: block; }
-
-        .gallery {
-            display: grid; grid-template-columns: 1fr; gap: 20px; width: 90%; margin: 30px auto;
-        }
-        @media (min-width: 768px) {
-            .gallery { grid-template-columns: repeat(3, 1fr); }
-        }
-        .gallery-img { width: 100%; height: auto; border-radius: 15px; border: 3px solid #ff4d6d; box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
-
+        .gallery { display: grid; grid-template-columns: 1fr; gap: 20px; width: 90%; margin: 30px auto; }
+        @media (min-width: 768px) { .gallery { grid-template-columns: repeat(3, 1fr); } }
+        .gallery-img { width: 100%; height: auto; border-radius: 15px; border: 2px solid #ff4d6d; box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
         .beach-section { background: rgba(255, 255, 255, 0.7); padding: 30px 15px; margin: 40px 10px; border-radius: 20px; border: 2px dashed #ff4d6d; }
-        .mystery-box { width: 120px; height: 120px; margin: 20px auto; cursor: pointer; position: relative; }
-
         .btn-container { margin-top: 30px; padding-bottom: 100px; }
         .yes-btn { padding: 15px 40px; background: #25d366; color: white; border-radius: 50px; text-decoration: none; display: inline-block; font-weight: bold; }
         .no-btn { padding: 15px 40px; background: white; color: #d6336c; border-radius: 50px; border: 2px solid #d6336c; font-weight: bold; }
@@ -74,7 +61,6 @@
     </style>
 </head>
 <body>
-
     <div class="hearts-bg" id="heartsBg"></div>
 
     <div id="door-container">
@@ -83,14 +69,12 @@
                 <div class="scan-line" id="scanLine"></div>
                 <div class="heart-scanner">❤️</div>
             </div>
-            <p style="color: white; font-weight: bold; margin-top: 20px; text-align: center;">Verify identity to continue ❤️</p>
+            <p style="color: white; font-weight: bold; margin-top: 20px; text-align: center;">Hold heart to verify identity ❤️</p>
         </div>
 
         <div id="verify-message" onclick="openGift()">
             <h3 style="margin: 0 0 10px;">Identity Verified: Future Wifey ✅</h3>
-            <p style="margin: 0; font-size: 1.1rem; line-height: 1.4;">
-                Click here... I want to show you my dream that I will fulfill one day.
-            </p>
+            <p style="margin: 0; font-size: 1.1rem; line-height: 1.4;">Click here... I want to show you my dream that I will fulfill one day.</p>
         </div>
     </div>
 
@@ -104,26 +88,16 @@
 
     <div id="main-content-area">
         <div class="video-box"><video id="myVideo" playsinline controls loop><source src="us.mp4" type="video/mp4"></video></div>
-        
         <div id="scroll-content">
             <h2 style="font-family: 'Dancing Script';">Our Memories ❤️</h2>
             <div class="gallery">
-                <img src="art1.jpg" class="gallery-img">
-                <img src="art2.jpg" class="gallery-img">
-                <img src="art3.jpg" class="gallery-img">
-                <img src="art4.jpg" class="gallery-img">
-                <img src="art5.jpg" class="gallery-img">
-                <img src="art6.jpg" class="gallery-img">
+                <img src="art1.jpg" class="gallery-img"><img src="art2.jpg" class="gallery-img"><img src="art3.jpg" class="gallery-img">
+                <img src="art4.jpg" class="gallery-img"><img src="art5.jpg" class="gallery-img"><img src="art6.jpg" class="gallery-img">
             </div>
-
             <div class="beach-section">
                 <p style="line-height: 1.6;">"Hey sweetheart, I know you've always dreamed of me proposing to you on a beautiful beach. 🌊<br><br>I promise you, as I work hard on my fitness and lose this weight, I am preparing myself for that exact moment.<br><br>One day very soon, it won't just be a dream—it will be our reality. ❤️"</p>
-                <div class="box-container mystery-box" id="beachBox" onclick="openBeachBox()">
-                    <div class="box-lid" style="height:30px;"></div><div class="box-body" style="height:90px;"><div class="ribbon-text" style="font-size:0.5rem; height:20px;">Mystery Box 🌊</div></div>
-                </div>
-                <div class="video-box" id="beachVideoBox" style="display:none;"><video id="beachVideo" playsinline controls loop><source src="beach.mp4" type="video/mp4"></video></div>
+                <div class="video-box" id="beachVideoBox"><video id="beachVideo" playsinline controls loop><source src="beach.mp4" type="video/mp4"></video></div>
             </div>
-
             <div class="btn-container">
                 <h2 style="font-family: 'Dancing Script'; font-size: 2.2rem;">Will you be mine forever?</h2>
                 <div style="margin-top: 20px;">
@@ -136,20 +110,33 @@
 
     <script>
         const scanner = document.getElementById('scanner');
-        const mainVid = document.getElementById('myVideo');
-        const beachVid = document.getElementById('beachVideo');
         const scannerUI = document.getElementById('scanner-ui');
         const verifyMsg = document.getElementById('verify-message');
-        let scanTimer; let yesScale = 1;
+        const scanLine = document.getElementById('scanLine');
+        const mainVid = document.getElementById('myVideo');
+        let scanInterval;
+        let yesScale = 1;
 
+        // FIXED SCAN LOGIC FOR MOBILE AND LAPTOP
         function startScan(e) {
             e.preventDefault();
-            document.getElementById('scanLine').style.display = 'block';
-            scanTimer = setTimeout(() => {
-                document.getElementById('scanLine').style.display = 'none';
-                scannerUI.style.display = 'none';
-                verifyMsg.style.display = 'block'; // Shows the green message card
-            }, 2500);
+            scanLine.style.display = 'block';
+            
+            let progress = 0;
+            scanInterval = setInterval(() => {
+                progress += 50;
+                if (progress >= 2500) {
+                    clearInterval(scanInterval);
+                    scanLine.style.display = 'none';
+                    scannerUI.style.display = 'none';
+                    verifyMsg.style.display = 'block';
+                }
+            }, 50);
+        }
+
+        function stopScan() {
+            clearInterval(scanInterval);
+            scanLine.style.display = 'none';
         }
 
         function openGift() {
@@ -165,13 +152,6 @@
             mainVid.play();
         }
 
-        function openBeachBox() {
-            document.getElementById('beachBox').style.display = 'none';
-            document.getElementById('beachVideoBox').style.display = 'block';
-            mainVid.pause();
-            beachVid.play();
-        }
-
         function moveNo() {
             const noBtn = document.getElementById('noBtn'); const yesBtn = document.getElementById('yesBtn');
             noBtn.style.position = 'fixed';
@@ -180,9 +160,14 @@
             yesScale += 0.3; yesBtn.style.transform = `scale(${yesScale})`;
         }
 
+        // Event Listeners for Laptop
         scanner.addEventListener('mousedown', startScan);
+        window.addEventListener('mouseup', stopScan);
+
+        // Event Listeners for Mobile (Strict Hold)
         scanner.addEventListener('touchstart', startScan);
-        window.addEventListener('mouseup', () => { clearTimeout(scanTimer); document.getElementById('scanLine').style.display = 'none'; });
+        scanner.addEventListener('touchend', stopScan);
+        scanner.addEventListener('touchcancel', stopScan);
 
         function createHeart() {
             const heart = document.createElement('div'); heart.classList.add('floating-heart'); heart.innerHTML = '❤️';
